--- a/src/components/CourseTimelineCard/index.css
+++ b/src/components/CourseTimelineCard/index.css
@@ -1,1 +1,53 @@
-/* Write your CSS here */
+/* Styling Courses */
+.course-item {
+  font-family: 'Roboto';
+}
+
+/* Course title section */
+.course-title-duration {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-title {
+  color: #1e293b;
+}
+.course-duration {
+  font-size: 15px;
+  font-weight: 600;
+  color: #1e293b;
+
+  display: flex;
+  align-items: center;
+  gap: 1.4px;
+}
+
+/* Course Description */
+.course-description {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+/* Course Tags */
+.course-tags-list {
+  width: 90%;
+  padding-left: 0;
+
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.course-tag {
+  list-style-type: none;
+  background-color: #e2e8f1;
+  border: solid 1.3px #e2e8f1;
+  border-radius: 4px;
+
+  padding: 3px 9px;
+  margin: 5px;
+}
+.tag {
+  margin: 0;
+  font-size: 11px;
+}
