--- a/src/components/TimelineView/index.css
+++ b/src/components/TimelineView/index.css
@@ -1,5 +1,16 @@
 /* Write your CSS here */
 .chrono-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+}
+.timeline-header {
+  width: 100%;
+  text-align: center;
+  font-family: 'Roboto';
+}
+.title-tag {
+  color: #1e293b;
+}
+.title {
+  color: #2b237c;
 }
